# py-share

./: Makefile.am  README  configure.ac  py-share.py
data/: py_share.ui
src/: Makefile.am  ipaddress.py  py_share.py~  share.py
